--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,23 @@ body h1{
     font-family:architects daughter;
     font-size: 3rem;
 }
+body h2{
+    color: rgba(255, 250, 187, 0.993);
+    font-family:architects daughter;
+}
+
+.race{
+    color: rgba(255, 250, 187, 0.993);
+    font-family:architects daughter;    
+    justify-content: center;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+}
+.race div{
+    padding: .5rem;
+    text-align: center;
+}
 .container{
     height: auto;
     width: auto;
@@ -18,25 +35,31 @@ body h1{
     border-radius: 5px;
     background-image: radial-gradient(azure, rgba(255, 250, 187, 0.993));
     box-shadow: 2px 4px rgb(163, 163, 79);
+    color: black;        
+}
+.container div{
+    padding: 1rem;    
 }
 
-.header{
-    padding: 1rem;
+.header{    
     grid-row: 1/4;
     justify-content: center;    
     display: flex;
-    flex-wrap: wrap;       
+    flex-wrap: wrap;
+    color: black;       
 }
 .header h2{
     font-family:architects daughter;
     font-size: 2.5rem;
+    color: black;    
 }
 .header h3{
     font-family:architects daughter;
     font-size: 2.5rem;
+    color: black;    
 }
 .header img{
-    height: 7rem;      
+    height: 7rem;          
 }
 .power-{
     padding: 1rem;
@@ -44,7 +67,8 @@ body h1{
     justify-content: center;
     display: flex;
     flex-wrap: wrap;
-    font-family:architects daughter;       
+    font-family:architects daughter;
+    color: black;       
 }
 .power- img{
     height: 2rem;
@@ -67,8 +91,5 @@ body h1{
 .p-header{
     font-size: 2rem; 
 }
-.img::after {
-    content: "";
-    clear: both;
-    display: table;
-}
+
+
