--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,10 @@ body h2{
     font-family:architects daughter;
 }
 
+.title img{
+    width: 100%;
+}
+
 .race{
     color: rgba(255, 250, 187, 0.993);
     font-family:architects daughter;    
