--- a/styles_class.css
+++ b/styles_class.css
@@ -12,7 +12,11 @@ header a{
     text-decoration: none;
     color: rgba(255, 250, 187, 0.993);
 }
-.prom a{
+.prom  a{
+    text-decoration: none;
+    color: rgba(230, 220, 110, 0.993);
+}
+.disciplines  a{
     text-decoration: none;
     color: rgba(230, 220, 110, 0.993);
 }
@@ -21,6 +25,10 @@ header a:hover{
     color: rgba(230, 220, 110, 0.993);
 }
 .prom a:hover{
+    text-decoration: none;
+    color: rgba(255, 250, 187, 0.993);
+}
+.disciplines a:hover{
     text-decoration: none;
     color: rgba(255, 250, 187, 0.993);
 }
@@ -150,3 +158,77 @@ section > *{
     font-size: 2rem; 
 }
 /* above container for the powers */
+/* below container for major and minor discipline cards */
+.container-major{ 
+    height: auto;
+    width: 45%;    
+    margin: .5rem;           
+    grid-template-rows: auto auto 1fr;
+    border: 1px solid black;
+    border-radius: 5px;
+    background-image: radial-gradient(ivory, rgba(255, 250, 187, 0.993));
+    box-shadow: 2px 4px rgb(163, 163, 79);
+    color: black;        
+}
+.container div{
+    padding: 1rem;    
+}
+
+.header{    
+    grid-row: 1/4;
+    justify-content: center;    
+    display: flex;
+    flex-wrap: wrap;
+    color: black;       
+}
+.header h2{
+    font-family:architects daughter;
+    font-size: 2.5rem;
+    color: black;    
+}
+.header h3{
+    font-family:architects daughter;
+    font-size: 2rem;
+    color: black;
+    margin: 0;    
+}
+.header h6{
+    font-family:architects daughter;
+    font-size: 2.5rem;
+    color: black;
+    margin: 0;    
+}
+.header img{
+    height: 7rem;          
+}
+.power-{
+    padding: 1rem;
+    grid-row: 2/3;    
+    justify-content: center;
+    display: flex;
+    flex-wrap: wrap;
+    font-family:architects daughter;
+    color: black;       
+}
+.power- img{
+    height: 2rem;
+    display: inline;    
+}
+.power div{     
+    text-align: center;    
+}
+.power- p {    
+    margin: 0;
+}
+
+.info{    
+    margin-left: 1rem;
+    margin-right: 1rem;
+    grid-column: 1/4;    
+    font-family:architects daughter;
+    font-size: 1.5rem;     
+}
+.p-header{
+    font-size: 2rem; 
+}
+/* above container for major and minor discipline cards */
