--- a/styles_class.css
+++ b/styles_class.css
@@ -50,6 +50,7 @@ body h3{
     font-size: 2rem;
     color: rgba(230, 220, 110, 0.993);
 }
+
 /* below card for the class image's race and power domains */
 .class-info{        
     display: flex;
@@ -63,9 +64,11 @@ body h3{
 .title img{
     width: 100%;    
 }
-.class-races{    
-    align-self: flex-end;
-    text-align: center;          
+
+.race{
+    margin-top: 2rem;
+    display: flex;
+    justify-content: center;
 }
 .race div{
     padding: .5rem;
@@ -100,7 +103,7 @@ section > *{
     border: 1px solid black;
     border-radius: 5px;
     background-image: radial-gradient(ivory, rgba(255, 250, 187, 0.993));
-    box-shadow: 2px 4px rgb(163, 163, 79);
+    box-shadow: 1px 2px 6px 2px rgb(163, 163, 79);
     color: black;        
 }
 .container div{
@@ -167,7 +170,7 @@ section > *{
     border: 1px solid black;
     border-radius: 5px;
     background-image: radial-gradient(ivory, rgba(255, 250, 187, 0.993));
-    box-shadow: 2px 4px rgb(163, 163, 79);
+    box-shadow: 1px 2px 6px 2px rgb(163, 163, 79);
     color: black;        
 }
 .container div{
