--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Architects+Daughter&display=swap');
 
+*{
+    padding: 0;
+    margin: 0;
+}
 body{
     background-color: black;    
     text-align: center;
