--- a/styles_class.css
+++ b/styles_class.css
@@ -1,3 +1,7 @@
+*{
+    padding: 0;
+    margin: 0;
+}
 @media (prefers-color-scheme: dark) {
   body {
     color: #eee;
@@ -17,7 +21,7 @@ section{
     justify-content: center;
     color: azure;
 }
-nav ul{    
+ul{    
     list-style-type: none;
     text-align: center;  
 }
@@ -52,6 +56,13 @@ body{
 .container-major h6{
     font-size: 1.5rem;
     margin: 0;
+}
+.class-disciplines-text h3{
+    margin-bottom: .5rem;
+    margin-top: .5rem;
+}
+.cooldown-img{
+    margin-bottom: .5rem;
 }
 @media screen and (max-width:625px) { 
 
@@ -142,6 +153,7 @@ body{
         display: flex;
         align-items: center;
         justify-content: center;
+        list-style-type: none;
     }
     .class-promotion-text2{
         background: rgb(128, 20, 128);
