--- a/styles_class.css
+++ b/styles_class.css
@@ -47,7 +47,7 @@ body{
     font-size: 2rem;
     font-weight: bolder;
     margin: 0;
-    margin-bottom: 1rem;
+    margin-top: 1rem;
 }
 .container-major h3{
     font-size: 1.2rem;
