--- a/styles_class.css
+++ b/styles_class.css
@@ -42,11 +42,11 @@ body{
 }
 .container-major h3{
     font-size: 1.2rem;
-    margin: 0;
+    margin-top: .5rem;
 }
 .container-major h6{
     font-size: 1.5rem;
-    margin: 0;
+    margin-bottom: .5rem;
 }
 .class-disciplines-text h3{
     margin-bottom: .5rem;
