--- a/styles_class.css
+++ b/styles_class.css
@@ -55,6 +55,10 @@ body{
 .cooldown-img{
     margin-bottom: .5rem;
 }
+h1{
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+}
 @media screen and (max-width:625px) { 
 
     /* The Class card */
