--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,8 @@ body{
 
 .class-icon{
     display: flex;
-    text-align: center    
+    text-align: center;
+    cursor: pointer;    
 }
 
 @media screen and (max-width:720px){
@@ -19,8 +20,7 @@ body{
         background-color: black;    
         display: grid;
         grid-template-columns: repeat(2, 1fr) ;
-        flex-wrap: wrap;
-        
+        flex-wrap: wrap;        
         justify-items: center;   
     }
 
@@ -30,30 +30,23 @@ body{
         background-color: black;    
         display: grid;
         grid-template-columns: repeat(1, 1fr) ;
-        flex-wrap: wrap;
-        
+        flex-wrap: wrap;        
         justify-items: center;      
     }
 
 }
 
 @media (prefers-color-scheme: light) {
-    body {
+    body{
       color: black;
       background-color: white;      
     }
-    a {
+    a{
       color: black;      
     }
     a:hover {
         color: rgb(255, 80, 255);;      
-      }
-    .class-container a{
-        color: #eee;
-    }
-    .class-container a:hover{
-        color: rgb(0, 253, 253);
-    }
+    }  
     nav{
         color: black;
     }
