--- a/styles.css
+++ b/styles.css
@@ -31,17 +31,20 @@ body{
 .class-icon{
     display: flex;
     text-align: center;
-    cursor: pointer;    
+    cursor: pointer;
+    justify-content: center;    
 }
 .race-icon{
   display: flex;
   text-align: center;  
   cursor: pointer;
+  justify-content: center;
 }
 .domains-icon{
   display: flex;
   text-align: center;  
-  cursor: pointer;  
+  cursor: pointer;
+  justify-content: center;  
 }
 .domains-icon h1{
   margin-bottom: .5rem;  
@@ -53,22 +56,35 @@ body{
 }
 
 @media screen and (max-width:720px){
-    body{
-        background-color: black;    
-        display: grid;
-        grid-template-columns: repeat(2, 1fr) ;
-        flex-wrap: wrap;        
-        justify-items: center;   
+   
+    .class-section{
+      display: grid;
+      grid-template-columns: auto auto ;
+    }
+    .race-section{
+      display: grid;      
+      grid-template-columns: auto auto;
+    }
+    .domains-section{
+      display: grid;      
+      grid-template-columns: auto auto;
     }
 
 }
 @media screen and (max-width:470px){
-    body{
-        background-color: black;    
-        display: grid;
-        grid-template-columns: repeat(1, 1fr) ;
-        flex-wrap: wrap;        
-        justify-items: center;      
+    
+    .class-section{
+      display: grid;
+      grid-template-columns: auto;
+    }
+    .race-section{
+      display: grid;      
+      grid-template-columns: auto;
+      
+    }
+    .domains-section{
+      display: grid;      
+      grid-template-columns: auto;      
     }
 
 }
