--- a/styles_domains.css
+++ b/styles_domains.css
@@ -678,14 +678,35 @@ h1{
 @media screen and (min-width:1400px) {  
 
     /* The Class card */
-.class-container{    
+.domain-disciplines{
+    background: rgb(128, 20, 128);   
     display: grid;
-    grid-template-columns: 33vw 33vw 33vw;
+    grid-template-columns: auto;
     column-gap: .2rem;
-    grid-template-rows: auto auto auto auto auto;
+    grid-template-rows: auto;
     row-gap: .2rem;
+    text-align: center;
+    margin-top: 1rem;   
+}
+.domain-disciplines h2{    
+    display: grid;
+    grid-column: 1/3;
+    grid-row: 1/2;     
     text-align: center;   
 }
+.domain-majors{    
+    display: grid;
+    grid-column: 1;
+    grid-row: 2/10;     
+    text-align: center;   
+}
+.domain-minors{    
+    display: grid;
+    grid-column: 2;
+    grid-row: 2/10;     
+    text-align: center;   
+}
+
 .class-image{
     background: rgb(128, 20, 128);
     color: azure;
